plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.0'
	id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.coherentsolutions.pot'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	annotationProcessor 'org.projectlombok:lombok'
	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.3.Final'
	implementation 'org.springframework.boot:spring-boot-starter'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.projectlombok:lombok'
	implementation 'org.mapstruct:mapstruct:1.5.3.Final'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'jakarta.validation:jakarta.validation-api:3.1.0'
	implementation 'org.springdoc:springdoc-openapi-ui:1.8.0'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.jeasy:easy-random-core:4.1.0'
	testImplementation 'com.h2database:h2:2.2.224'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.jeasy:easy-random-core:5.0.0'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	runtimeOnly 'com.h2database:h2'


	// For future use
	// implementation 'org.postgresql:postgresql:42.5.0'
}

tasks.named('test') {
	useJUnitPlatform()
}

bootJar {
	archiveFileName.set('insurance-project.jar')
//    manifest {
//        attributes('Main-Class': 'com.coherentsolutions.pot.insurance.InsuranceApplication')
//    }
}